# microlane

./: .gitignore  .gitmodules  README.md  batch_evaluation.ipynb  batch_inference.ipynb  config.yaml  evaluate.ipynb  experiment.py  inference.ipynb  predictions.json  pyproject.toml  raw.xlsx  requirements.txt  visualise.ipynb
configs/: config.yaml
microlane/: batch_evaluation.ipynb  batch_inference.ipynb  evaluate.ipynb  inference.ipynb  inference.py  inference_raw_image.ipynb  preprocess.py  visualise.ipynb
microlane/augmentation/: augmentor.py
microlane/augmentors/: augmentor.py  blur.py  lighting.py  motion_blur.py
microlane/datasets/: culane.py  custom_dataset.py  microlane.py  raw.py  tusimple.py
microlane/evaluation/: evaluator.py  iou.py  tusimple_benchmark.py
microlane/evalutation/: accuracy.py  evaluator.py  f1_score.py  lane_eval.py
microlane/formatters/: lanenet2_formatter.py
microlane/models/: container.py  lanenet2.py  model.py
microlane/schema/: model_limbs.py  output.py  prediction.py  sample.py
microlane/schemas/: config.py  evaluation.py  prediction.py  sample.py
microlane/utils/: container.py  create_settings.py  experiment.py  load_config.py  load_image.py  loaders.py  prediction_utils.py  request_processing.py  result.py
notebooks/: evaluate.ipynb
pipeline/core/: visualize.py
scripts/: batch_evaluation.ipynb  cli.py  evaluate.ipynb  graphing.ipynb  inference.ipynb  microlane.py  microlane_to_tusimple.py  sample_frames.ipynb  sequence_inference.ipynb  testing.ipynb  visualise.ipynb  visualize_converted.py
scripts/commands/: assess.py  compare.py  evaluate.py  index.py  summarize.py
scripts/core/: evaluate.py  evaluation_to_csv.py  load_prediction_files.py  read_image.py  results.py  search_evaluation.py  visualization.py
scripts/notebooks/: batch_evaluation.ipynb  batch_inference.ipynb  evaluate.ipynb  inference.ipynb  normalise_file_paths.ipynb  sample_frames.ipynb
utils/: inference.py  preprocess.py
(+99 files in other folders)
